added evaluation methods for model: bit error rates for frozen and non frozen bits, works well

--- a/src/evaluation/mamba_32bits.ipynb
+++ b/src/evaluation/mamba_32bits.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "555608c6",
    "metadata": {},
    "outputs": [],
@@ -25,6 +25,16 @@
     "    p = p.parent\n",
     "\n",
     "sys.path.insert(0, str(project_root))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "4e1aee55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
    ]
   },
   {
@@ -39199,7 +39209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "0c7fcca8",
    "metadata": {},
    "outputs": [
@@ -39209,13 +39219,13 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ckpt = torch.load(os.path.join(ckpt_dir, \"model_epoch_2.pt\"), map_location=device)\n",
+    "\n",
     "\n",
     "# load model\n",
     "state_dict = ckpt.get(\"model_state_dict\", ckpt.get(\"state_dict\", ckpt))\n",
@@ -39224,18 +39234,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 87,
    "id": "145948b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_set = PolarDecDataset(snr_db=6, num_samples=32000)\n",
+    "test_set = PolarDecDataset(snr_db=10, num_samples=32000, fixed_msg_bit_size=24)\n",
     "test_dataloader = DataLoader(test_set, batch_size = 32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 99,
    "id": "6b25f543",
    "metadata": {},
    "outputs": [
@@ -39243,25 +39253,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Channel Observation Vector: torch.Size([32, 32])\n",
-      "Frozen Tensor: torch.Size([32, 32])\n",
+      "Actual bits:     00010110001100101011000011100000\n",
       "\n",
-      "Predicted Channel Input Vector(logits): torch.Size([32, 32])\n",
-      "\n",
-      "\n",
-      "Predicted (sigmoid): tensor([[0.5341, 0.5382, 0.5415,  ..., 0.0019, 0.2995, 0.5135],\n",
-      "        [0.5195, 0.1343, 0.9539,  ..., 0.0019, 0.0503, 0.5132],\n",
-      "        [0.5019, 0.2825, 0.9145,  ..., 0.0069, 0.4908, 0.4948],\n",
-      "        ...,\n",
-      "        [0.5324, 0.4309, 0.4971,  ..., 0.0070, 0.3950, 0.5048],\n",
-      "        [0.5385, 0.3914, 0.6064,  ..., 0.0136, 0.0642, 0.5193],\n",
-      "        [0.5112, 0.5342, 0.8696,  ..., 0.5214, 0.4460, 0.5050]],\n",
-      "       device='cuda:0', grad_fn=<SigmoidBackward0>)\n",
-      "\n",
-      "\n",
-      "Predicted bits:11111010101010001000000010100001\n",
-      "\n",
-      "Actual bits: 01010010001010000000000010000000\n",
+      "Predicted bits:  10101010101100101011000011100001\n",
       "\n"
      ]
     }
@@ -39272,102 +39266,319 @@
     "ip2 = frozen_tensor.int().to(device)\n",
     "ip3 = snr_tensor.float().to(device)\n",
     "\n",
+    "#print(ip2[0])\n",
     "\n",
     "predicted = model(ip1, ip2, ip3) #works\n",
     "\n",
     " #loss = calculate_loss_for_reliable_bits_only(ip2, target_tensor.to(device), predicted.to(device), loss_fn) #works\n",
     "\n",
     "\n",
-    "print(f\"Channel Observation Vector: {ip1.shape}\\nFrozen Tensor: {ip2.shape}\\n\")\n",
-    "print(f\"Predicted Channel Input Vector(logits): {predicted.shape}\\n\\n\")\n",
+    "#print(f\"Channel Observation Vector: {ip1.shape}\\nFrozen Tensor: {ip2.shape}\\n\")\n",
+    "#print(f\"Predicted Channel Input Vector(logits): {predicted.shape}\\n\\n\")\n",
     "\n",
-    "print(f\"Predicted (sigmoid): {torch.sigmoid(predicted)}\\n\\n\")\n",
+    "#print(f\"Predicted (sigmoid): {torch.sigmoid(predicted)}\\n\\n\")\n",
     "pred = (torch.sigmoid(predicted) > 0.5).long()[0]\n",
     "\n",
-    "print(f\"Predicted bits:{''.join(map(str, pred.cpu().tolist()))}\\n\")\n",
-    "print(f\"Actual bits: {''.join(str(int(i)) for i in target_tensor[0])}\\n\")\n",
+    "print(f\"Actual bits:     {''.join(str(int(i)) for i in target_tensor[0])}\\n\")\n",
+    "print(f\"Predicted bits:  {''.join(map(str, pred.cpu().tolist()))}\\n\")\n",
+    "\n",
     "#print(f\"Loss: {loss}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 101,
    "id": "e7f72196",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
-    "def calc_ber(test_loader, model, device):\n",
+    "def calc_save_ber(model, device , msg_bit_sizes:list, snr_db=10, num_samples=32000, json_file_name=None):\n",
     "    \"\"\"\n",
-    "    Calculate BER over a test dataset considering only non-frozen bits.\n",
+    "    Calculate BER over a test dataset and saves the detailed data of bit errors for frozen and non frozen bits\n",
     "\n",
     "    Args:\n",
     "        test_loader: PyTorch DataLoader providing (channel, frozen, snr, target)\n",
-    "        model: your trained model\n",
+    "        model: trained model\n",
     "        device: torch device (cpu or cuda)\n",
     "    \n",
     "    Returns:\n",
     "        float: average BER over the test set\n",
     "    \"\"\"\n",
-    "    total_bit_errors = 0\n",
-    "    total_bits = 0\n",
     "\n",
-    "    model.eval()\n",
-    "    with torch.no_grad():\n",
-    "        for i, data in enumerate(test_loader):\n",
-    "            channel_tensor, frozen_tensor, snr_tensor, target_tensor = data\n",
-    "            \n",
-    "            # Move to device\n",
-    "            ip1 = channel_tensor.float().to(device)\n",
-    "            ip2 = frozen_tensor.int().to(device)\n",
-    "            ip3 = snr_tensor.float().to(device)\n",
-    "            op = target_tensor.int().to(device)\n",
+    "    eval_results = {}\n",
     "\n",
-    "          #  print(ip3.shape)\n",
+    "    for each_msg_bit_size in msg_bit_sizes:\n",
     "\n",
-    "            # Forward pass\n",
-    "            predicted_vector = model(ip1, ip2, ip3)\n",
+    "        print(f\"Evaluating bit error rates for message bit size {each_msg_bit_size}...\\n\\n\")\n",
+    "      \n",
+    "       \n",
+    "        total_msg_bit_errors = 0\n",
+    "        total_frozen_bit_errors = 0\n",
+    "        total_frozen_bits = 0\n",
+    "        total_msg_bits = num_samples*each_msg_bit_size\n",
     "\n",
-    "            # Threshold predictions if they are probabilities/logits\n",
-    "            if predicted_vector.dtype != torch.bool and predicted_vector.dtype != torch.int:\n",
-    "                predicted_vector = (predicted_vector > 0.5).int()\n",
+    "        test_set = PolarDecDataset(snr_db=snr_db, num_samples=num_samples, fixed_msg_bit_size=each_msg_bit_size)\n",
+    "        test_loader = DataLoader(dataset=test_set, batch_size = 32)\n",
     "\n",
-    "            # Mask for reliable (non-frozen) bits\n",
-    "            mask = (ip2 != 1)\n",
-    "            reliable_target = op[mask]\n",
-    "            reliable_predicted = predicted_vector[mask]\n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "            for i, data in enumerate(test_loader):\n",
+    "                channel_tensor, frozen_tensor, snr_tensor, target_tensor = data\n",
+    "                \n",
+    "                \n",
+    "                ip1 = channel_tensor.float().to(device)\n",
+    "                ip2 = frozen_tensor.int().to(device)\n",
+    "                ip3 = snr_tensor.float().to(device)\n",
+    "                op = target_tensor.int().to(device)\n",
     "\n",
-    "            # Compute bit errors and accumulate\n",
-    "            bit_errors = (reliable_target != reliable_predicted).sum().item()\n",
-    "            total_bit_errors += bit_errors\n",
-    "            total_bits += reliable_target.numel()\n",
+    "            #  print(ip3.shape)\n",
     "\n",
-    "    # Average BER\n",
-    "    ber = total_bit_errors / total_bits if total_bits > 0 else 0.0\n",
-    "    return ber\n"
+    "                \n",
+    "                predicted_vector = model(ip1, ip2, ip3)\n",
+    "\n",
+    "                \n",
+    "                if predicted_vector.dtype != torch.bool and predicted_vector.dtype != torch.int:\n",
+    "                    predicted_vector = (predicted_vector > 0.5).int()\n",
+    "\n",
+    "                \n",
+    "                mask_frozen = (ip2 != 0)\n",
+    "                mask_msg = (ip2 != 1)\n",
+    "\n",
+    "                reliable_target = op[mask_msg]\n",
+    "                reliable_predicted = predicted_vector[mask_msg]\n",
+    "\n",
+    "                frozen_targets = op[mask_frozen]\n",
+    "                frozen_predicted = predicted_vector[mask_frozen]\n",
+    "\n",
+    "                \n",
+    "                msg_bit_errors = (reliable_target != reliable_predicted).sum().item()\n",
+    "                total_msg_bit_errors += msg_bit_errors\n",
+    "                \n",
+    "                frozen_bit_errors = (frozen_targets != frozen_predicted).sum().item()\n",
+    "                total_frozen_bit_errors += frozen_bit_errors\n",
+    "                total_frozen_bits += len(frozen_targets)\n",
+    "\n",
+    "        \n",
+    "        total_bits = total_msg_bits + total_frozen_bits\n",
+    "        net_error_bits = total_frozen_bit_errors + total_msg_bit_errors\n",
+    "\n",
+    "        avg_net_ber = net_error_bits/ total_bits \n",
+    "        print(f\"average_net_bit_error_rate : {avg_net_ber}\\n\")\n",
+    "\n",
+    "        avg_msg_bits_ber = total_msg_bit_errors / total_msg_bits\n",
+    "        print(f\"average_msg_bit_error_rate : {avg_msg_bits_ber}\\n\")\n",
+    "\n",
+    "        avg_frozen_bits_ber = total_frozen_bit_errors/total_frozen_bits\n",
+    "        print(f\"average_frozen_bit_error_rate : {avg_frozen_bits_ber}\\n\")\n",
+    "        \n",
+    "        eval_results[each_msg_bit_size] = {\n",
+    "            \"average_net_bit_error_rate\" : avg_net_ber,\n",
+    "            \"average_msg_bit_bit_error_rate\": avg_msg_bits_ber,\n",
+    "            \"average_frozen_bits_bit_error_rate\": avg_frozen_bits_ber,\n",
+    "            \"batch_size\": test_dataloader.batch_size,\n",
+    "            \"num_samples\": num_samples,\n",
+    "            \"total_bits\": total_bits,\n",
+    "            \"total_error_bits\": net_error_bits,\n",
+    "            \"total_msg_bits\": total_msg_bits,\n",
+    "            \"total_frozen_bits\": total_frozen_bits,\n",
+    "            \"snr\": snr_db\n",
+    "        }\n",
+    "    \n",
+    "\n",
+    "    with open(f\"{json_file_name}.json\", \"w\") as f:\n",
+    "        json.dump(eval_results, f, indent=4)\n",
+    "\n",
+    "    print(f\"Results saved to {json_file_name}.json file of current directory!\")\n",
+    "    \n",
+    "\n",
+    "    return eval_results\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 103,
    "id": "aef1ce36",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating bit error rates for message bit size 8...\n",
+      "\n",
+      "\n",
+      "average_net_bit_error_rate : 0.2256494140625\n",
+      "\n",
+      "average_msg_bit_error_rate : 0.26607421875\n",
+      "\n",
+      "average_frozen_bit_error_rate : 0.21217447916666668\n",
+      "\n",
+      "Evaluating bit error rates for message bit size 16...\n",
+      "\n",
+      "\n",
+      "average_net_bit_error_rate : 0.2152216796875\n",
+      "\n",
+      "average_msg_bit_error_rate : 0.255376953125\n",
+      "\n",
+      "average_frozen_bit_error_rate : 0.17506640625\n",
+      "\n",
+      "Evaluating bit error rates for message bit size 24...\n",
+      "\n",
+      "\n",
+      "average_net_bit_error_rate : 0.2351357421875\n",
+      "\n",
+      "average_msg_bit_error_rate : 0.292296875\n",
+      "\n",
+      "average_frozen_bit_error_rate : 0.06365234375\n",
+      "\n",
+      "Results saved to evaluation_model_config_2.json file of current directory!\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.21275488728837338"
+       "{8: {'average_net_bit_error_rate': 0.2256494140625,\n",
+       "  'average_msg_bit_bit_error_rate': 0.26607421875,\n",
+       "  'average_frozen_bits_bit_error_rate': 0.21217447916666668,\n",
+       "  'batch_size': 32,\n",
+       "  'num_samples': 32000,\n",
+       "  'total_bits': 1024000,\n",
+       "  'total_error_bits': 231065,\n",
+       "  'total_msg_bits': 256000,\n",
+       "  'total_frozen_bits': 768000,\n",
+       "  'snr': 4},\n",
+       " 16: {'average_net_bit_error_rate': 0.2152216796875,\n",
+       "  'average_msg_bit_bit_error_rate': 0.255376953125,\n",
+       "  'average_frozen_bits_bit_error_rate': 0.17506640625,\n",
+       "  'batch_size': 32,\n",
+       "  'num_samples': 32000,\n",
+       "  'total_bits': 1024000,\n",
+       "  'total_error_bits': 220387,\n",
+       "  'total_msg_bits': 512000,\n",
+       "  'total_frozen_bits': 512000,\n",
+       "  'snr': 4},\n",
+       " 24: {'average_net_bit_error_rate': 0.2351357421875,\n",
+       "  'average_msg_bit_bit_error_rate': 0.292296875,\n",
+       "  'average_frozen_bits_bit_error_rate': 0.06365234375,\n",
+       "  'batch_size': 32,\n",
+       "  'num_samples': 32000,\n",
+       "  'total_bits': 1024000,\n",
+       "  'total_error_bits': 240779,\n",
+       "  'total_msg_bits': 768000,\n",
+       "  'total_frozen_bits': 256000,\n",
+       "  'snr': 4}}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ber = calc_ber(test_dataloader, model, device)\n",
-    "ber"
+    "calc_save_ber(model, device, msg_bit_sizes=[8, 16, 24], snr_db=4, json_file_name=\"evaluation_model_config_2\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01413e72",
+   "metadata": {},
+   "source": [
+    "## Evaluating model's performance on frozen bits vs non frozen bits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "cba0d7a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msg_bit_sizes = [8, 16, 24]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8aaac780",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_set = PolarDecDataset(snr_db=10, num_samples=320, fixed_msg_bit_size=msg_bit_sizes[0])\n",
+    "test_dataloader = DataLoader(test_set, batch_size = 32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "23eafbc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "       device='cuda:0', dtype=torch.int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "\n",
+    "    for i, data in enumerate(test_dataloader):\n",
+    "        channel_tensor, frozen_tensor, snr_tensor, target_tensor = data\n",
+    "        \n",
+    "        ip1 = channel_tensor.float().to(device)\n",
+    "        ip2 = frozen_tensor.int().to(device)\n",
+    "        ip3 = snr_tensor.float().to(device)\n",
+    "        op = target_tensor.int().to(device)\n",
+    "\n",
+    "        predicted_vector = model(ip1, ip2, ip3)\n",
+    "\n",
+    "        if predicted_vector.dtype != torch.bool and predicted_vector.dtype != torch.int:\n",
+    "                predicted_vector = (predicted_vector > 0.5).int()\n",
+    "\n",
+    "         \n",
+    "        mask = (ip2 != 0)\n",
+    "        frozen_target = op[mask]\n",
+    "        frozen_predicted = predicted_vector[mask]\n",
+    "        print(frozen_predicted)\n",
+    "        break\n",
+    "        \n"
    ]
   }
  ],
