--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -25,12 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d85178a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 32"
+    "N = 32\n",
+    "CONFIG_NO = 2"
    ]
   },
   {
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "f26fb8ca",
    "metadata": {},
    "outputs": [],
@@ -390,13 +391,23 @@
     "      \n",
     "    \n",
     "      best_vloss = avg_vloss\n",
-    "      model_path = './checkpoints/model_epoch_{}.pt'.format(epoch)\n",
+    "      model_path = f'./checkpoints/config_{CONFIG_NO}/model_epoch_{epoch}.pt'\n",
     "      torch.save({\n",
-    "         'epoch': epoch+1,\n",
-    "         'train_loss': avg_loss,\n",
-    "         'val_loss': avg_vloss,\n",
-    "         'state_dict': model.state_dict()\n",
-    "      }, model_path)\n",
+    "    'model_config': {\n",
+    "        \"d_model\": model.d_model,\n",
+    "        \"num_layer_encoder\": model.num_layer_encoder,\n",
+    "        \"num_layers_bimamba_block\": model.num_layers_bimamba_block,\n",
+    "        \"seq_len\": model.seq_len,\n",
+    "        \"d_state\": model.d_state,\n",
+    "        \"d_conv\": model.d_conv,\n",
+    "        \"expand\": model.expand,\n",
+    "    },\n",
+    "    'epoch': epoch + 1,\n",
+    "    'train_loss': avg_loss,\n",
+    "    'val_loss': avg_vloss,\n",
+    "    'state_dict': model.state_dict()\n",
+    "}, model_path)\n",
+    "\n",
     "\n",
     "     \n",
     "    print(\"Training completed. Model available to use\")\n",
