--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -27,19 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "1e6fb613",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'cuda'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m device \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_available() \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      2\u001b[0m device\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+     ]
     }
    ],
    "source": [
@@ -63,7 +64,8 @@
    "outputs": [],
    "source": [
     "dataset = PolarDecDataset(snr_db=10, num_samples=100000, seq_length=N)\n",
-    "test_set = PolarDecDataset(snr_db=10, num_samples=3200, seq_length=N)\n"
+    "test_set = PolarDecDataset(snr_db=10, num_samples=3200, seq_length=N)\n",
+    "#num_samples = polar_block"
    ]
   },
   {
@@ -192,7 +194,8 @@
     "checkpoint = torch.load(model_path, map_location=device)\n",
     "\n",
     "state_dict = checkpoint.get(\"model_state_dict\", checkpoint.get(\"state_dict\", checkpoint))\n",
-    "model.load_state_dict(state_dict)"
+    "model.load_state_dict(state_dict)\n",
+    "#Loads a previously trained model to either continue training or evaluate."
    ]
   },
   {
@@ -211,94 +214,50 @@
    "outputs": [],
    "source": [
     "def calculate_loss(frozen_bit_prior, target_vector, predicted_vector,  reliable_only=False):\n",
-    "    \"\"\"\n",
-    "    frozen_bit_prior: tensor of shape (seq_len,) with 1 for frozen, 0 for message bits\n",
-    "    target_vector: tensor of shape (seq_len,)\n",
-    "    predicted_vector: tensor of shape (seq_len,)\n",
-    "    loss_fn: PyTorch loss function\n",
-    "    \"\"\"\n",
     "\n",
     "    if reliable_only: \n",
     "     mask = (frozen_bit_prior != 1) \n",
     "     target_vector = target_vector[mask]\n",
     "     predicted_vector = predicted_vector[mask]\n",
     "\n",
-    "    #print(\"target vector:\" ,target_vector[:32], \"\\n\")\n",
-    "    #print(\"pred vector:\" ,predicted_vector[:32])\n",
-    "\n",
-    "   # print(f\"Length of reliable bits: {len(reliable_target)}\")\n",
     "    loss_fn = torch.nn.BCEWithLogitsLoss()\n",
     "\n",
-    "    return loss_fn(predicted_vector, target_vector)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "808bd9a5",
-   "metadata": {},
-   "source": [
-    "## Sanity Check"
+    "    return loss_fn(predicted_vector, target_vector)\n",
+    "    #Defines a custom loss function for polar code decoding, optionally ignoring frozen bits."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "d5dc9380",
+   "execution_count": 1,
+   "id": "69534924",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted bits:10110100100011101111000011100000\n",
-      "\n",
-      "Actual bits: 10000010100011101111000011100000\n",
-      "\n",
-      "Loss: 0.4178037941455841\n"
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mAdam(model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-3\u001b[39m, weight_decay\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m      3\u001b[0m scheduler \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mlr_scheduler\u001b[38;5;241m.\u001b[39mReduceLROnPlateau(optimizer, mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmin\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m      4\u001b[0m                                                         factor\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m, patience\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
      ]
     }
    ],
-   "source": [
-    "llr, frozen_tensor, snr_tensor, target_tensor= next(iter(train_dataloader))\n",
-    "ip1 = llr.float().to(device)\n",
-    "ip2 = frozen_tensor.int().to(device)\n",
-    "ip3 = snr_tensor.float().to(device)\n",
-    "\n",
-    "predicted = model(ip1, ip2, ip3) #works\n",
-    "\n",
-    "loss = calculate_loss(ip2, target_tensor.to(device), predicted.to(device)) #works\n",
-    "\n",
-    "#print(f\"Channel Observation Vector: {channel_tensor}\\n\\n\")\n",
-    "\n",
-    "\n",
-    "#print(f\"Channel Observation Vector: {ip1.shape}\\nFrozen Tensor: {ip2.shape}\\n\")\n",
-    "#print(f\"Predicted Channel Input Vector(logits): {predicted.shape}\\n\\n\")\n",
-    "\n",
-    "#print(f\"Predicted (sigmoid): {torch.sigmoid(predicted)}\\n\\n\")\n",
-    "pred = (torch.sigmoid(predicted) > 0.5).long()[0]\n",
-    "\n",
-    "print(f\"Predicted bits:{''.join(map(str, pred.cpu().tolist()))}\\n\")\n",
-    "print(f\"Actual bits: {''.join(str(int(i)) for i in target_tensor[0])}\\n\")\n",
-    "print(f\"Loss: {loss}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "69534924",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3, weight_decay=0)\n",
     "\n",
     "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', \n",
-    "                                                        factor=0.5, patience=3)\n"
+    "                                                        factor=0.5, patience=3)\n",
+    "\n",
+    "# Adam optimizer with learning rate 0.001.\n",
+    "# ReduceLROnPlateau reduces learning rate by factor 0.5 if validation loss does not improve for 3 epochs.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "32f8dbd6",
    "metadata": {},
    "outputs": [],
@@ -310,6 +269,7 @@
     "\n",
     "\n",
     "    for i, data in enumerate(train_dataloader):\n",
+    "        # Extracting tensors\n",
     "        channel_tensor, frozen_tensor, snr_tensor, target_tensor = data\n",
     "        ip1 = channel_tensor.float().to(device)\n",
     "        ip2 = frozen_tensor.int().to(device)\n",
@@ -318,12 +278,7 @@
     "        optimizer.zero_grad()\n",
     "        outputs = model(ip1,ip2 ,ip3 ).to(device)\n",
     "\n",
-    "    #    B, L, C = outputs.shape\n",
-    "    #    output_logits = outputs.view(B*L, C).to(device)\n",
-    "    #    target_flattened = shifted.view(B*L).to(device).long()\n",
     "\n",
-    "\n",
-    "    #    loss = loss_fn(output_logits, target_flattened)\n",
     "        \n",
     "        loss = calculate_loss(ip2, op, outputs)\n",
     "\n",
@@ -336,7 +291,6 @@
     "        if i%1000 == 999:\n",
     "            last_loss = running_loss/1000\n",
     "            print('  batch {} loss: {}\\n'.format(i + 1, last_loss))\n",
-    "          #  print(f\"Predictions look currently like: {outputs[:32]}\\n\\n\")\n",
     "            running_loss = 0.\n",
     "    return last_loss\n"
    ]
@@ -383,6 +337,7 @@
     "\n",
     "    \n",
     "     if avg_vloss < best_vloss:\n",
+    "    # Saves the model checkpoint if validation loss improves\n",
     "      \n",
     "    \n",
     "      best_vloss = avg_vloss\n",
@@ -833,7 +788,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.12.3)",
+   "display_name": "3.10.15",
    "language": "python",
    "name": "python3"
   },
@@ -847,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
