--- a/src/evaluation/mamba_32bits.ipynb
+++ b/src/evaluation/mamba_32bits.ipynb
@@ -6262,7 +6262,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.12.3)",
+   "display_name": "Python 3.10.15 64-bit ('3.10.15')",
    "language": "python",
    "name": "python3"
   },
@@ -6276,7 +6276,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.15"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "385783751c4a81d4636ec942be388b37d0586b8dec2331ed11eaf9a9d2f0cb7e"
+   }
   }
  },
  "nbformat": 4,
